# wmipg

./: .gitignore  Pipfile  README.md  pyproject.toml  wmipg.py
src/: common.py  wmipg.py
src/namespaces/: __init__.py  root_cimv2.py  root_securitycenter2.py  root_sms.py  root_standardcimv2.py
src/sccm/cmds/: __init__.py  applications.py  collections.py  deployments.py  devices.py  operations.py  policies.py  rules.py  scripts.py  settings.py
src/sccm/lib/: __init__.py  applications.py  collections.py  deployments.py  devices.py  operations.py  policies.py  rules.py  scripts.py  settings.py
src/sccm/templates/: basic_application.xml
src/wmipg/: common.py  wmipg.py
src/wmipg/cimv2/cmds/: __init__.py  file_operation.py  generic.py  process.py  registry.py  service.py  shadow.py  share.py  user.py
src/wmipg/cimv2/lib/: file_operation.py  generic.py  process.py  registry.py  service.py  shadow.py  share.py  user.py
src/wmipg/namespaces/: __init__.py  root_cimv2.py  root_microsoft_windows_deviceguard.py  root_securitycenter2.py  root_sms.py  root_standardcimv2.py
src/wmipg/sccm/cmds/: applications.py  collections.py  deployments.py  devices.py  operations.py  policies.py  rules.py  scripts.py  settings.py
src/wmipg/sccm/lib/: applications.py  collections.py  deployments.py  devices.py  operations.py  policies.py  rules.py  scripts.py  settings.py
src/wmipg/static/: security.yaml
