[tool.poetry]
name = "wmipg"
version = "0.2.3"
description = "WMI Play Ground"
authors = ["Veids <veidsme@gmail.com>"]
readme = "README.md"
packages=[
  {"include" = "wmipg", from = "src" }
]

[tool.poetry.scripts]
wmipg = "wmipg.wmipg:main"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
impacket = "^0.11.0"
cmd2 = "^2.4.3"
ipython = "^8.18.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
