[project]
name = "wmipg"
version = "0.2.8"
description = "WMI Play Ground"
authors = [{ name = "Veids", email = "veidsme@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "rich>=14",
    "impacket>=0.12.0",
    "cmd2>=2.4.3,<3",
    "ipython>=8.18.1,<9",
    "ruamel-yaml>=0.18.6,<0.19",
    "setuptools>=80.9.0",
]

[project.scripts]
wmipg = "wmipg.wmipg:main"

[dependency-groups]
dev = [
    "flake8>=6.1.0,<7",
    "flake8-bugbear>=23.12.2,<24",
]

[tool.hatch.build.targets.sdist]
include = ["src/wmipg"]

[tool.hatch.build.targets.wheel]
include = ["src/wmipg"]

[tool.hatch.build.targets.wheel.sources]
"src/wmipg" = "wmipg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
