[project]
name = "wmipg"
version = "0.2.8"
description = "WMI Play Ground"
authors = [{ name = "Veids", email = "veidsme@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "rich>=14",
    "impacket>=0.12.0",
    "cmd2>=3.5.1,<4",
    "ipython>=9.13.0,<10",
    "pycryptodomex>=3.23.0",
    "ruamel-yaml>=0.19.1,<0.20",
    "setuptools>=80.9.0",
]

[project.scripts]
wmipg = "wmipg.wmipg:main"

[dependency-groups]
dev = [
    "flake8>=7.3.0,<8",
    "flake8-bugbear>=25.11.29,<26",
]

[tool.hatch.build.targets.sdist]
include = ["src/wmipg"]

[tool.hatch.build.targets.wheel]
include = ["src/wmipg"]

[tool.hatch.build.targets.wheel.sources]
"src/wmipg" = "wmipg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
